第三方微信分享api不能用，暂时取消

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script type="text/javascript">
 
         // 开启Api的debug模式
-        WeixinApi.enableDebugMode();
+        // WeixinApi.enableDebugMode();
 
         // 给按钮增加click事件：请不要太纠结这个写法，demo而已
         // var addEvent = function(elId,listener){
@@ -110,68 +110,68 @@
         // });
 
         // 需要分享的内容，请放到ready里
-        WeixinApi.ready(function(Api) {
+        // WeixinApi.ready(function(Api) {
 
-            // 微信分享的数据
-            var wxData = {
-                "appId": "", // 服务号可以填写appId
-                "imgUrl" : 'http://stupidtang.github.com/images/icon.jpg',
-                "link" : 'http://stupidtang.github.com',
-                "desc" : '欢迎来到Fion的个人主页，游记已更新！',
-                "title" : "唐惠安的个人主页"
-            };
+        //     // 微信分享的数据
+        //     var wxData = {
+        //         "appId": "", // 服务号可以填写appId
+        //         "imgUrl" : 'http://stupidtang.github.com/images/icon.jpg',
+        //         "link" : 'http://stupidtang.github.com',
+        //         "desc" : '欢迎来到Fion的个人主页，游记已更新！',
+        //         "title" : "唐惠安的个人主页"
+        //     };
 
-            // 分享的回调
-            var wxCallbacks = {
-                // 关闭favorite
-                favorite:false,
+        //     // 分享的回调
+        //     var wxCallbacks = {
+        //         // 关闭favorite
+        //         favorite:false,
 
-                // 分享操作开始之前
-                ready : function() {
-                    // 你可以在这里对分享的数据进行重组
-                    //alert("准备分享");
-                },
-                // 分享被用户自动取消
-                cancel : function(resp) {
-                    // 你可以在你的页面上给用户一个小Tip，为什么要取消呢？
-                    //alert("分享被取消，msg=" + resp.err_msg);
-                },
-                // 分享失败了
-                fail : function(resp) {
-                    // 分享失败了，是不是可以告诉用户：不要紧，可能是网络问题，一会儿再试试？
-                    //alert("分享失败，msg=" + resp.err_msg);
-                },
-                // 分享成功
-                confirm : function(resp) {
-                    // 分享成功了，我们是不是可以做一些分享统计呢？
-                    alert("分享成功，msg=" + resp.err_msg);
-                },
-                // 整个分享过程结束
-                all : function(resp,shareTo) {
-                    // 如果你做的是一个鼓励用户进行分享的产品，在这里是不是可以给用户一些反馈了？
-                    alert("分享" + (shareTo ? "到" + shareTo : "") + "结束，msg=" + resp.err_msg);
-                }
-            };
+        //         // 分享操作开始之前
+        //         ready : function() {
+        //             // 你可以在这里对分享的数据进行重组
+        //             //alert("准备分享");
+        //         },
+        //         // 分享被用户自动取消
+        //         cancel : function(resp) {
+        //             // 你可以在你的页面上给用户一个小Tip，为什么要取消呢？
+        //             //alert("分享被取消，msg=" + resp.err_msg);
+        //         },
+        //         // 分享失败了
+        //         fail : function(resp) {
+        //             // 分享失败了，是不是可以告诉用户：不要紧，可能是网络问题，一会儿再试试？
+        //             //alert("分享失败，msg=" + resp.err_msg);
+        //         },
+        //         // 分享成功
+        //         confirm : function(resp) {
+        //             // 分享成功了，我们是不是可以做一些分享统计呢？
+        //             alert("分享成功，msg=" + resp.err_msg);
+        //         },
+        //         // 整个分享过程结束
+        //         all : function(resp,shareTo) {
+        //             // 如果你做的是一个鼓励用户进行分享的产品，在这里是不是可以给用户一些反馈了？
+        //             alert("分享" + (shareTo ? "到" + shareTo : "") + "结束，msg=" + resp.err_msg);
+        //         }
+        //     };
 
-            // 用户点开右上角popup菜单后，点击分享给好友，会执行下面这个代码
-            Api.shareToFriend(wxData, wxCallbacks);
+        //     // 用户点开右上角popup菜单后，点击分享给好友，会执行下面这个代码
+        //     Api.shareToFriend(wxData, wxCallbacks);
 
-            // 点击分享到朋友圈，会执行下面这个代码
-            Api.shareToTimeline(wxData, wxCallbacks);
+        //     // 点击分享到朋友圈，会执行下面这个代码
+        //     Api.shareToTimeline(wxData, wxCallbacks);
 
-            // 点击分享到腾讯微博，会执行下面这个代码
-            Api.shareToWeibo(wxData, wxCallbacks);
+        //     // 点击分享到腾讯微博，会执行下面这个代码
+        //     Api.shareToWeibo(wxData, wxCallbacks);
 
-            // iOS上，可以直接调用这个API进行分享，一句话搞定
-            Api.generalShare(wxData,wxCallbacks);
+        //     // iOS上，可以直接调用这个API进行分享，一句话搞定
+        //     Api.generalShare(wxData,wxCallbacks);
 
-            // 有可能用户是直接用微信“扫一扫”打开的，这个情况下，optionMenu、toolbar都是off状态
-            // 为了方便用户测试，我先来trigger show一下
-            // optionMenu
-            // var elOptionMenu = document.getElementById('optionMenu');
-            // elOptionMenu.click(); // 先隐藏
-            // elOptionMenu.click(); // 再显示
-        });
+        //     // 有可能用户是直接用微信“扫一扫”打开的，这个情况下，optionMenu、toolbar都是off状态
+        //     // 为了方便用户测试，我先来trigger show一下
+        //     // optionMenu
+        //     // var elOptionMenu = document.getElementById('optionMenu');
+        //     // elOptionMenu.click(); // 先隐藏
+        //     // elOptionMenu.click(); // 再显示
+        // });
 
     </script>
         <title>
