--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <meta name="description" content="Stupidtang.GitHub.com : my online pages">
+        <!-- 禁止页面缓存 -->
+        <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+		<META HTTP-EQUIV="Cache-Control" CONTENT="no-cache">
+		<META HTTP-EQUIV="Expires" CONTENT="0">
+		<!-- 引入样式表 -->
         <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
         <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/style.css">
+        <!-- 网页自定义图标 -->
         <link rel="Shortcut Icon" href="images/icon.jpg">
         <title>
             唐惠安的个人主页
