增加河南游相册 洛阳部分

--- a/index.html
+++ b/index.html
@@ -62,13 +62,26 @@
             <section id="main_content" class="inner">
                 <h3>
                     <a href="general.html">
-                        ↓↓美景图片->点击查看更多
+                        【置顶】↓↓美景图片->点击查看更多
                     </a>
                 </h3>
             </section>
         </div>
         <div id="main11">
             <img src="images/pic1.jpg" width="100%">
+        </div>
+        <!-- 河南游相片板块 -->
+        <div id="main_content_wrap" class="outer">
+            <section id="main_content" class="inner">
+                <h3>
+                    <a href="henan.html">
+                        【最新】↓↓游河南洛阳、开封、安阳相册->点击查看更多
+                    </a>
+                </h3>
+            </section>
+        </div>
+        <div id="main11">
+            <img src="images/henan/luoyang1.jpg" width="100%">
         </div>
         <!-- 西安游记板块 -->
         <div id="main_content_wrap" class="outer">
@@ -82,7 +95,7 @@
         </div>
         <div id="main11">
             <img src="images/xian/xian.png" width="100%">
-        </div>
+        </div>    
         <!-- FOOTER -->
         <div id="footer_wrap" class="outer">
             <footer class="inner">
