--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </section>
         </div>
         <div id="main11">
-            <img src="images/henan/luoyang1.jpg" width="100%">
+            <img src="images/henan/luoyang1.JPG" width="100%">
         </div>
         <!-- 西安游记板块 -->
         <div id="main_content_wrap" class="outer">
