--- a/henan.html
+++ b/henan.html
@@ -42,15 +42,15 @@
             </section>
         </div>
         <div id="main11">
-            <img src="images/henan/luoyang2.jpg" width="100%">
-            <img src="images/henan/luoyang3.jpg" width="100%">
-            <img src="images/henan/luoyang4.jpg" width="100%">
-            <img src="images/henan/luoyang5.jpg" width="100%">
-            <img src="images/henan/luoyang6.jpg" width="100%">
-            <img src="images/henan/luoyang7.jpg" width="100%">
-            <img src="images/henan/luoyang8.jpg" width="100%">
-            <img src="images/henan/luoyang9.jpg" width="100%">
-            <img src="images/henan/luoyang10.jpg" width="100%">
+            <img src="images/henan/luoyang2.JPG" width="100%">
+            <img src="images/henan/luoyang3.JPG" width="100%">
+            <img src="images/henan/luoyang4.JPG" width="100%">
+            <img src="images/henan/luoyang5.JPG" width="100%">
+            <img src="images/henan/luoyang6.JPG" width="100%">
+            <img src="images/henan/luoyang7.JPG" width="100%">
+            <img src="images/henan/luoyang8.JPG" width="100%">
+            <img src="images/henan/luoyang9.JPG" width="100%">
+            <img src="images/henan/luoyang10.JPG" width="100%">
         </div>
         
         <div id="main_content_wrap" class="outer">
