所有页面禁止页面缓存

--- a/general.html
+++ b/general.html
@@ -5,6 +5,10 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <meta name="description" content="Stupidtang.GitHub.com : my online pages">
+        <!-- 禁止页面缓存 -->
+        <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+        <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache">
+        <META HTTP-EQUIV="Expires" CONTENT="0">
         <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
         <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/style.css">
         <link rel="Shortcut Icon" href="images/icon.jpg">
