--- a/index.html
+++ b/index.html
@@ -62,13 +62,15 @@
             <section id="main_content" class="inner">
                 <h3>
                     <a href="general.html">
-                        【置顶】↓↓美景图片->点击查看更多
+                        【置顶】↓↓精选美景->点击查看更多
                     </a>
                 </h3>
             </section>
         </div>
         <div id="main11">
+            <a href="general.html">
             <img src="images/pic1.jpg" width="100%">
+            </a>
         </div>
         <!-- 河南游相片板块 -->
         <div id="main_content_wrap" class="outer">
@@ -81,7 +83,24 @@
             </section>
         </div>
         <div id="main11">
+            <a href="henan.html">
             <img src="images/henan/luoyang1.JPG" width="100%">
+            </a>
+        </div>
+        <!-- 河南游相片板块 -->
+        <div id="main_content_wrap" class="outer">
+            <section id="main_content" class="inner">
+                <h3>
+                    <a href="emei.html">
+                        【最新】↓↓游四川峨眉山相册->点击查看更多
+                    </a>
+                </h3>
+            </section>
+        </div>
+        <div id="main11">
+            <a href="emei.html">
+            <img src="images/emei/emei13.JPG" width="100%">
+            </a>
         </div>
         <!-- 西安游记板块 -->
         <div id="main_content_wrap" class="outer">
@@ -94,7 +113,9 @@
             </section>
         </div>
         <div id="main11">
+            <a href="xian.html">
             <img src="images/xian/xian.png" width="100%">
+            </a>
         </div>    
         <!-- FOOTER -->
         <div id="footer_wrap" class="outer">
