--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
                 <h3>
-                    <a href="general.html">
+                    <a href="jingxuan.html">
                         【置顶】↓↓精选美景->点击查看更多
                     </a>
                 </h3>
             </section>
         </div>
         <div id="main11">
-            <a href="general.html">
+            <a href="jingxuan.html">
             <img src="images/pic1.jpg" width="100%">
             </a>
         </div>
