--- a/jingxuan.html
+++ b/jingxuan.html
@@ -46,9 +46,9 @@
             </section>
         </div>
         <div id="main11">
-            <img src="images/pic1.jpg" width="100%">
-            <img src="images/pic2.jpg" width="100%">
-            <img src="images/pic3.jpg" width="100%">
+            <img src="images/jingxuan/pic1.jpg" width="100%">
+            <img src="images/jingxuan/pic2.jpg" width="100%">
+            <img src="images/jingxuan/pic3.jpg" width="100%">
         </div>
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
@@ -63,9 +63,9 @@
             </section>
         </div>
         <div id="main11">
-            <img src="images/pic4.jpg" width="100%">
-            <img src="images/pic5.jpg" width="100%">
-            <img src="images/pic6.jpg" width="100%">
+            <img src="images/jingxuan/pic4.jpg" width="100%">
+            <img src="images/jingxuan/pic5.jpg" width="100%">
+            <img src="images/jingxuan/pic6.jpg" width="100%">
         </div>
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
@@ -80,9 +80,9 @@
             </section>
         </div>
         <div id="main11">
-            <img src="images/pic7.jpg" width="100%">
-            <img src="images/pic8.jpg" width="100%">
-            <img src="images/pic9.jpg" width="100%">
+            <img src="images/jingxuan/pic7.jpg" width="100%">
+            <img src="images/jingxuan/pic8.jpg" width="100%">
+            <img src="images/jingxuan/pic9.jpg" width="100%">
         </div>
         <div id="main_content_wrap" class="outer">
             <section id="main_content" class="inner">
