修改精选板块，增加美食板块

--- a/index.html
+++ b/index.html
@@ -62,14 +62,29 @@
             <section id="main_content" class="inner">
                 <h3>
                     <a href="jingxuan.html">
-                        【置顶】↓↓精选美景->点击查看更多
+                        【置顶已更新】↓↓精选美景->点击查看更多
                     </a>
                 </h3>
             </section>
         </div>
         <div id="main11">
             <a href="jingxuan.html">
-            <img src="images/pic1.jpg" width="100%">
+            <img src="images/jingxuan/pic6.jpg" width="100%">
+            </a>
+        </div>
+        <!-- 美食链接板块 -->
+        <div id="main_content_wrap" class="outer">
+            <section id="main_content" class="inner">
+                <h3>
+                    <a href="food.html">
+                        【最新】↓↓精选美食->点击查看更多
+                    </a>
+                </h3>
+            </section>
+        </div>
+        <div id="main11">
+            <a href="food.html">
+            <img src="images/food/food1.jpg" width="100%">
             </a>
         </div>
         <!-- 河南游相片板块 -->
