主页修改标语

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<h1>姓唐，名惠安</h1>
+					<h1>Just do it.</h1>
 					<h3>不要让这个世界的复杂性阻碍你前进</h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
