--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="col-lg-6">
 					<p>热爱互联网产品</p>
-					<p>热爱Android开发、网页前端开发</p>
+					<p>热爱互联网游戏</p>
 					<p>热血90后</p>
 					<p>热爱旅游、热爱运动</p>
 				</div>
@@ -103,8 +103,7 @@
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>即将毕业于2016年</sm><br/>
-					<imp><sm>正在攻读</sm></imp>
+					<p><sm>毕业于2016年7月</sm><br/>
 					</p>
 				</div>
 	
@@ -131,6 +130,17 @@
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>#工作经历#</h5>
 				</div>
+			
+				<div class="col-lg-6">
+					<p><t>广州四三九九信息科技有限公司</t><br/>
+						 工作岗位：平台技术中心 产品经理<br/>工作任务：平台相关产品策划。
+					</p>
+					<p><more>中国，广东，广州，保利中辰广场A座</more></p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>2016年1月18日至今</sm></p>
+				</div>
+			
 				<div class="col-lg-6">
 					<p><t>广州科腾信息技术有限公司</t><br/>
 						 工作岗位：移动开发工程师（实习）、维护工程师（实习）<br/>工作任务：从事移动互联网产品开发、测试以及产品运维。
@@ -138,7 +148,7 @@
 					<p><more>中国，广东，广州，广电科技大厦12楼</more></p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>2015年2月18日至今</sm></p>
+					<p><sm>2015年2月18日至8月10日</sm></p>
 				</div>
 	
 				<div class="col-lg-6 col-lg-offset-3">
@@ -249,7 +259,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="javascript" height="130" width="130"></canvas>
-						<p>安卓开发 85%</p>
+						<p>产品 85%</p>
 						<br>
 						<script>
 							var doughnutData = [
@@ -267,7 +277,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="bootstrap" height="130" width="130"></canvas>
-						<p>网页前端 70%</p>
+						<p>运营 70%</p>
 						<br>
 						<script>
 							var doughnutData = [
@@ -285,7 +295,7 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="wordpress" height="130" width="130"></canvas>
-						<p>网页后端 65%</p>
+						<p>综合 65%</p>
 						<br>
 						<script>
 							var doughnutData = [
@@ -304,16 +314,16 @@
 					
 					<div class="col-lg-3 col-lg-offset-3 centered">
 						<canvas id="html" height="130" width="130"></canvas>
-						<p>产品 70%</p>
+						<p>安卓开发 50%</p>
 						<br>
 						<script>
 							var doughnutData = [
 									{
-										value: 70,
+										value: 50,
 										color:"#1abc9c"
 									},
 									{
-										value : 30,
+										value : 50,
 										color : "#ecf0f1"
 									}
 								];
@@ -322,16 +332,16 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="photoshop" height="130" width="130"></canvas>
-						<p>运营 70%</p>
+						<p>网页前端 50%</p>
 						<br>
 						<script>
 							var doughnutData = [
 									{
-										value: 70,
+										value: 50,
 										color:"#1abc9c"
 									},
 									{
-										value : 30,
+										value : 50,
 										color : "#ecf0f1"
 									}
 								];
@@ -340,16 +350,16 @@
 					</div>
 					<div class="col-lg-3 centered">
 						<canvas id="illustrator" height="130" width="130"></canvas>
-						<p>综合 70%</p>
+						<p>服务器 40%</p>
 						<br>
 						<script>
 							var doughnutData = [
 									{
-										value: 70,
+										value: 40,
 										color:"#1abc9c"
 									},
 									{
-										value : 30,
+										value : 60,
 										color : "#ecf0f1"
 									}
 								];
@@ -455,9 +465,10 @@
 				</div>
 				<div class="col-lg-6">
 					<p><t>E-mail</t><br/>
+						tanghuian@4399.com <br/>
 						447409030@qq.com <br/>
 						stupid_tang@163.com <br />
-						stupidtang@gmailcom <br />
+						stupidtang@gmail.com <br />
 					</p>
 					<p><t>Github</t><br/>
 						链接：<a href="https://github.com/stupidtang">我的Github仓库</a> <br/>
