屏蔽简历，更新工作信息

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 					<p>热血90后</p>
 					<p>热爱旅游、热爱运动</p>
 				</div>
-				<div class="col-lg-3">
-					<p><a href="唐惠安个人简历v4.0.pdf"><i class="icon-file"></i></a> <sm>我的简历</sm></p>
-				</div>
+				//<div class="col-lg-3">
+				//	<p><a href="唐惠安个人简历v4.0.pdf"><i class="icon-file"></i></a> <sm>我的简历</sm></p>
+				//</div>
 				
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -130,7 +130,6 @@
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>#工作经历#</h5>
 				</div>
-			
 				<div class="col-lg-6">
 					<p><t>广州四三九九信息科技有限公司</t><br/>
 						 工作岗位：平台技术中心 产品经理<br/>工作任务：平台相关产品策划。
@@ -140,7 +139,6 @@
 				<div class="col-lg-3">
 					<p><sm>2016年1月18日至今</sm></p>
 				</div>
-			
 				<div class="col-lg-6">
 					<p><t>广州科腾信息技术有限公司</t><br/>
 						 工作岗位：移动开发工程师（实习）、维护工程师（实习）<br/>工作任务：从事移动互联网产品开发、测试以及产品运维。
@@ -149,18 +147,6 @@
 				</div>
 				<div class="col-lg-3">
 					<p><sm>2015年2月18日至8月10日</sm></p>
-				</div>
-	
-				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>深圳优豆互联科技有限公司</t><br/>
-						 工作岗位：安卓开发实习生<br/>
-						 工作任务：从事安卓开发与测试相关工作
-
-					</p>
-					<p><more>中国，广东，深圳，好运来大厦A座0920</more></p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>2014年7月15日至8月15日</sm></p>
 				</div>
 		</div><!--/.row -->
 		<br>
